--- a/campusjobs/src/main/res/layout/fragment_sjobfair.xml
+++ b/campusjobs/src/main/res/layout/fragment_sjobfair.xml
@@ -37,7 +37,7 @@
             android:id="@+id/empty_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="invisible"></cn.goodjobs.common.view.empty.EmptyLayout>
+            android:visibility="gone"></cn.goodjobs.common.view.empty.EmptyLayout>
     </RelativeLayout>
 
 </LinearLayout>
