--- a/headhuntingjob/src/main/res/layout/activity_headdetails.xml
+++ b/headhuntingjob/src/main/res/layout/activity_headdetails.xml
@@ -39,8 +39,8 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/iv_share"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="@dimen/padding_small"
-                    android:layout_marginTop="@dimen/padding_small"
+                    android:paddingBottom="2dip"
+                    android:paddingTop="2dip"
                     android:text="分享"
                     android:textColor="@color/topbar_bg"
                     android:textSize="@dimen/text_default" />
@@ -57,8 +57,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginTop="@dimen/padding_small"
                     android:background="@drawable/button_bg"
+                    android:paddingBottom="@dimen/padding_small"
+                    android:paddingTop="@dimen/padding_small"
                     android:text="申请职位"
                     android:textColor="@color/white"
                     android:textSize="@dimen/text_default" />
@@ -85,8 +86,8 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/iv_collect"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="@dimen/padding_small"
-                    android:layout_marginTop="@dimen/padding_small"
+                    android:paddingBottom="2dip"
+                    android:paddingTop="2dip"
                     android:text="收藏"
                     android:textColor="@color/topbar_bg"
                     android:textSize="@dimen/text_default" />
