--- a/headhuntingjob/src/main/res/layout/activity_rewarddetails.xml
+++ b/headhuntingjob/src/main/res/layout/activity_rewarddetails.xml
@@ -39,8 +39,8 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/iv_share"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="@dimen/padding_small"
-                    android:layout_marginTop="@dimen/padding_small"
+                    android:paddingBottom="2dip"
+                    android:paddingTop="2dip"
                     android:text="分享"
                     android:textColor="@color/topbar_bg"
                     android:textSize="@dimen/text_default" />
@@ -58,8 +58,10 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:background="@drawable/button_bg"
+                    android:paddingBottom="@dimen/padding_small"
                     android:paddingLeft="@dimen/padding_default"
                     android:paddingRight="@dimen/padding_default"
+                    android:paddingTop="@dimen/padding_small"
                     android:text="申请职位"
                     android:textColor="@color/white"
                     android:textSize="@dimen/text_default" />
@@ -72,8 +74,10 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/padding_default"
                     android:background="@drawable/button_bg_yellow"
+                    android:paddingBottom="@dimen/padding_small"
                     android:paddingLeft="@dimen/padding_default"
                     android:paddingRight="@dimen/padding_default"
+                    android:paddingTop="@dimen/padding_small"
                     android:text="推荐人才"
                     android:textColor="@color/white"
                     android:textSize="@dimen/text_default" />
@@ -100,8 +104,8 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/iv_collect"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="@dimen/padding_small"
-                    android:layout_marginTop="@dimen/padding_small"
+                    android:paddingBottom="2dip"
+                    android:paddingTop="2dip"
                     android:text="收藏"
                     android:textColor="@color/topbar_bg"
                     android:textSize="@dimen/text_default" />
