--- a/applyjobs/src/main/res/layout/fragment_job_search.xml
+++ b/applyjobs/src/main/res/layout/fragment_job_search.xml
@@ -30,6 +30,7 @@
             android:padding="@dimen/space_10"
             android:layout_width="40dip"
             android:layout_height="40dip"
+            android:visibility="gone"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:src="@drawable/icon_clear"/>
