--- a/campusjobs/src/main/res/layout/fragment_campus.xml
+++ b/campusjobs/src/main/res/layout/fragment_campus.xml
@@ -24,6 +24,7 @@
                 android:visibility="gone" />
 
             <LinearLayout
+                android:layout_marginTop="@dimen/padding_default"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
