--- a/applyjobs/src/main/res/layout/fragment_home.xml
+++ b/applyjobs/src/main/res/layout/fragment_home.xml
@@ -117,24 +117,13 @@
                 <View style="@style/line"/>
             </LinearLayout>
 
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:background="@color/white">
-                <View style="@style/line"/>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="80dip"
-                    android:orientation="horizontal">
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="#FFF2E3">
-                    </RelativeLayout>
-                </LinearLayout>
-                <View style="@style/line"/>
+                android:layout_marginTop="@dimen/padding_default">
+                <include layout="@layout/include_main_bottom"/>
             </LinearLayout>
 
         </LinearLayout>
