--- a/applyjobs/src/main/res/layout/activity_headerdetails.xml
+++ b/applyjobs/src/main/res/layout/activity_headerdetails.xml
@@ -1,38 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <include layout="@layout/actionbar" />
 
-    <in.srain.cube.views.ptr.PtrClassicFrameLayout
-        android:id="@id/load_more_list_view_ptr_frame"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <in.srain.cube.views.ptr.loadmore.LoadMoreListViewContainer
-            android:id="@id/load_more_list_view_container"
+        <in.srain.cube.views.ptr.PtrClassicFrameLayout
+            android:id="@id/load_more_list_view_ptr_frame"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#ffffff">
+            android:layout_height="match_parent">
 
-            <ListView
-                android:id="@id/list_view"
+            <in.srain.cube.views.ptr.loadmore.LoadMoreListViewContainer
+                android:id="@id/load_more_list_view_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:divider="@null"
-                android:fadingEdge="none"
-                android:listSelector="@android:color/transparent"
-                android:scrollbarStyle="outsideOverlay" />
+                android:background="#ffffff">
 
-        </in.srain.cube.views.ptr.loadmore.LoadMoreListViewContainer>
-    </in.srain.cube.views.ptr.PtrClassicFrameLayout>
+                <ListView
+                    android:id="@id/list_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:divider="@null"
+                    android:fadingEdge="none"
+                    android:listSelector="@android:color/transparent"
+                    android:scrollbarStyle="outsideOverlay" />
 
-    <cn.goodjobs.common.view.empty.EmptyLayout
-        android:id="@+id/empty_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="invisible">
-    </cn.goodjobs.common.view.empty.EmptyLayout>
+            </in.srain.cube.views.ptr.loadmore.LoadMoreListViewContainer>
+        </in.srain.cube.views.ptr.PtrClassicFrameLayout>
+
+        <cn.goodjobs.common.view.empty.EmptyLayout
+            android:id="@+id/empty_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="invisible"></cn.goodjobs.common.view.empty.EmptyLayout>
+    </RelativeLayout>
 
 </LinearLayout>
