--- a/applyjobs/src/main/res/layout/fragment_job_fair.xml
+++ b/applyjobs/src/main/res/layout/fragment_job_fair.xml
@@ -5,21 +5,26 @@
     android:orientation="vertical">
 
 
-    <ListView
-        android:id="@+id/lv_fair"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:dividerHeight="1dip"
-        android:fadingEdge="none"
-        android:listSelector="@android:color/transparent"
-        android:scrollbarStyle="outsideOverlay" />
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/lv_fair"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:dividerHeight="1dip"
+            android:fadingEdge="none"
+            android:listSelector="@android:color/transparent"
+            android:scrollbarStyle="outsideOverlay" />
 
 
-    <cn.goodjobs.common.view.empty.EmptyLayout
-        android:id="@+id/empty_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="invisible"></cn.goodjobs.common.view.empty.EmptyLayout>
+        <cn.goodjobs.common.view.empty.EmptyLayout
+            android:id="@+id/empty_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"></cn.goodjobs.common.view.empty.EmptyLayout>
+    </RelativeLayout>
 
 
 </LinearLayout>
