添加全职首页逻辑

--- a/applyjobs/src/main/res/layout/fragment_home.xml
+++ b/applyjobs/src/main/res/layout/fragment_home.xml
@@ -1,9 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:listitem="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/bg_color">
+              xmlns:listitem="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/bg_color"
+              android:orientation="vertical">
 
     <include layout="@layout/topbar"/>
 
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="none">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -18,47 +19,53 @@
 
             <!-- 广告位  -->
             <cn.trinea.android.view.autoscrollviewpager.AutoScrollViewPager
-                android:visibility="gone"
                 android:id="@+id/adViewPager"
                 android:layout_width="fill_parent"
-                android:layout_height="@dimen/main_banner_height"/>
+                android:layout_height="@dimen/main_banner_height"
+                android:visibility="gone"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:background="@color/white">
+                android:background="@color/white"
+                android:orientation="vertical">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
                     android:layout_margin="@dimen/padding_small"
-                    android:padding="@dimen/padding_small"
+                    android:background="@drawable/edittext_bg"
                     android:gravity="center_vertical"
-                    android:background="@drawable/edittext_bg">
+                    android:orientation="horizontal"
+                    android:padding="@dimen/padding_small">
+
                     <ImageView
                         android:layout_width="20dip"
                         android:layout_height="20dip"
                         android:src="@mipmap/fdj28_grey"/>
 
                     <EditText
+                        android:id="@+id/etSearch"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:background="@color/transparent"
+                        android:focusable="false"
                         android:hint="输入关键字/职位/公司搜索"
-                        android:enabled="false"
-                        android:textSize="@dimen/text_small"
-                        android:background="@color/transparent"/>
+                        android:textSize="@dimen/text_small"/>
 
                     <ImageButton
+                        android:id="@+id/search_clean"
                         android:layout_width="20dip"
                         android:layout_height="20dip"
-                        android:src="@drawable/icon_clear"
                         android:background="@color/transparent"
                         android:scaleType="fitCenter"
+                        android:src="@drawable/icon_clear"
                         android:visibility="invisible"/>
                 </LinearLayout>
+
                 <View style="@style/line"/>
+
                 <cn.goodjobs.common.view.searchItem.SelectorItemView
                     android:id="@+id/item_address"
                     android:layout_width="match_parent"
@@ -71,16 +78,19 @@
                     listitem:tvtitle="工作地点"/>
 
                 <cn.goodjobs.common.view.searchItem.SelectorItemView
+                    android:id="@+id/item_jobfunc"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:clickable="true"
                     listitem:containAll="true"
                     listitem:hint="选择职位类别"
+                    listitem:showLine="false"
                     listitem:singleSelected="false"
                     listitem:source="jobfunc_l1;jobfunc_l2"
-                    listitem:showLine="false"
                     listitem:tvtitle="职位类别"/>
+
                 <View style="@style/line"/>
+
                 <Button
                     android:id="@+id/btnSearch"
                     android:layout_width="match_parent"
@@ -92,28 +102,31 @@
                     android:textSize="@dimen/text_default"/>
 
                 <LinearLayout
+                    android:id="@+id/historyLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/historyLayout"
-                    android:paddingLeft="@dimen/padding_default"
-                    android:paddingRight="@dimen/padding_default"
+                    android:orientation="horizontal"
                     android:paddingBottom="@dimen/padding_default"
-                    android:orientation="horizontal">
+                    android:paddingLeft="@dimen/padding_default"
+                    android:paddingRight="@dimen/padding_default">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="@dimen/text_small"
+                        android:text="搜索记录："
                         android:textColor="@color/main_color"
-                        android:text="搜索记录："/>
+                        android:textSize="@dimen/text_small"/>
+
                     <TextView
                         android:id="@+id/tvHistory"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="@dimen/text_small"
-                        android:textColor="@color/topbar_bg"
                         android:clickable="true"
-                        android:text="合肥+互联网"/>
+                        android:textColor="@color/topbar_bg"
+                        android:textSize="@dimen/text_small"
+                        />
                 </LinearLayout>
+
                 <View style="@style/line"/>
             </LinearLayout>
 
@@ -121,8 +134,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="@dimen/padding_default">
+                android:layout_marginTop="@dimen/padding_default"
+                android:orientation="vertical">
+
                 <include layout="@layout/include_main_bottom"/>
             </LinearLayout>
 
