--- a/campusjobs/src/main/res/drawable/campus_footer1.xml
+++ b/campusjobs/src/main/res/drawable/campus_footer1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@mipmap/footer1" android:state_selected="true" />
-    <item android:drawable="@mipmap/footer1a" />
+    <item android:drawable="@mipmap/campus1" android:state_selected="true" />
+    <item android:drawable="@mipmap/campus1a" />
 </selector>
