--- a/parttimejobs/src/main/res/layout/activity_parttimejob.xml
+++ b/parttimejobs/src/main/res/layout/activity_parttimejob.xml
@@ -9,54 +9,62 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/padding_small"
-        android:background="@drawable/edittext_bg"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="@dimen/padding_small">
-
-        <EditText
-            android:id="@+id/et_career"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/transparent"
-            android:hint="输入关键字/职位/公司搜索" />
-
-        <ImageButton
-            android:id="@+id/ib_clear"
-            android:layout_width="20dip"
-            android:layout_height="20dip"
-            android:background="@color/transparent"
-            android:scaleType="fitCenter"
-            android:src="@drawable/icon_clear"
-            android:visibility="invisible" />
-
+        android:background="@color/white"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/ll_search"
-            android:layout_width="wrap_content"
-            android:layout_height="30dip"
-            android:layout_marginLeft="@dimen/padding_small"
-            android:background="@drawable/button_bg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/padding_small"
+            android:background="@drawable/edittext_bg"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingLeft="@dimen/padding_small"
-            android:paddingRight="@dimen/padding_small">
+            android:padding="@dimen/padding_small">
 
-            <ImageView
-                android:id="@+id/iv_search"
+            <EditText
+                android:id="@+id/et_career"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/transparent"
+                android:hint="输入关键字/职位/公司搜索" />
+
+            <ImageButton
+                android:id="@+id/ib_clear"
                 android:layout_width="20dip"
                 android:layout_height="20dip"
-                android:background="@mipmap/fdj28" />
+                android:background="@color/transparent"
+                android:scaleType="fitCenter"
+                android:src="@drawable/icon_clear"
+                android:visibility="invisible" />
 
-            <TextView
+
+            <LinearLayout
+                android:id="@+id/ll_search"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="30dip"
                 android:layout_marginLeft="@dimen/padding_small"
-                android:text="搜索"
-                android:textColor="@color/white"
-                android:textSize="@dimen/text_default" />
+                android:background="@drawable/button_bg"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingLeft="@dimen/padding_small"
+                android:paddingRight="@dimen/padding_small">
+
+                <ImageView
+                    android:id="@+id/iv_search"
+                    android:layout_width="20dip"
+                    android:layout_height="20dip"
+                    android:background="@mipmap/fdj28" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/padding_small"
+                    android:text="搜索"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/text_default" />
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
