--- a/headhuntingjob/src/main/res/layout/item_headhunting.xml
+++ b/headhuntingjob/src/main/res/layout/item_headhunting.xml
@@ -47,15 +47,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="25dip"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_apply"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/padding_small"
-            android:paddingLeft="@dimen/padding_default"
+            android:layout_height="25dip"
+            android:layout_marginLeft="@dimen/padding_default"
+            android:gravity="center_vertical"
             android:text="发布日期："
             android:textColor="@color/light_color"
             android:textSize="@dimen/text_small" />
@@ -63,27 +63,25 @@
         <TextView
             android:id="@+id/tv_date"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/padding_small"
-            android:paddingBottom="@dimen/padding_small"
+            android:layout_height="25dip"
+            android:gravity="center_vertical"
             android:text="2015-12-21"
             android:textColor="@color/light_color"
             android:textSize="@dimen/text_small" />
 
-        <TextView
+        <View
             android:layout_width="1dip"
             android:layout_height="15dip"
+            android:layout_marginBottom="5dip"
             android:layout_marginLeft="@dimen/padding_small"
-            android:layout_marginRight="@dimen/padding_small"
-            android:layout_marginTop="2dip"
-            android:background="@color/light_color"
-            android:paddingBottom="@dimen/padding_small" />
+            android:layout_marginTop="5dip"
+            android:background="@color/light_color" />
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:paddingBottom="@dimen/padding_small"
+            android:layout_height="25dip"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/padding_small"
             android:text="工作地点："
             android:textColor="@color/light_color"
             android:textSize="@dimen/text_small" />
@@ -91,10 +89,10 @@
         <TextView
             android:id="@+id/tv_place"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="25dip"
             android:ellipsize="end"
+            android:gravity="center_vertical"
             android:maxLines="1"
-            android:paddingBottom="@dimen/padding_small"
             android:text="六安市"
             android:textColor="@color/light_color"
             android:textSize="@dimen/text_small" />
