--- a/common/src/main/res/layout/activity_update_user_info.xml
+++ b/common/src/main/res/layout/activity_update_user_info.xml
@@ -40,6 +40,14 @@
             listitem:showHLine="false"
             listitem:showLine="false"/>
         <View style="@style/line"/>
-
     </LinearLayout>
+    <Button
+        android:id="@+id/btnLogout"
+        android:layout_width="match_parent"
+        android:layout_height="40dip"
+        android:layout_margin="@dimen/padding_default"
+        android:background="@drawable/button_bg"
+        android:text="退出登录"
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_default" />
 </LinearLayout>
