--- a/common/src/main/res/layout/item_personal_apply.xml
+++ b/common/src/main/res/layout/item_personal_apply.xml
@@ -36,15 +36,16 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <TextView
-                    android:id="@+id/tvTitle"
+                    android:id="@+id/tvJobname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:textSize="@dimen/text_default"
+                    android:textColor="@drawable/readstatus_text"
                     android:text="公司"/>
 
                 <TextView
-                    android:id="@+id/tvStatus"
+                    android:id="@+id/tvAddress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/text_small"
@@ -64,19 +65,43 @@
                     android:textSize="@dimen/text_small"
                     android:textColor="@color/light_color"
                     android:text="公司"/>
-
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/padding_small"
+                android:orientation="horizontal">
                 <TextView
-                    android:id="@+id/tvTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/text_small"
                     android:textColor="@color/light_color"
+                    android:text="申请人数("/>
+                <TextView
+                    android:id="@+id/tvNumber"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_small"
+                    android:textColor="@color/red"
+                    android:text="9"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_small"
+                    android:textColor="@color/light_color"
+                    android:text=")"/>
+
+                <TextView
+                    android:id="@+id/tvTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_small"
+                    android:textColor="@color/light_color"
+                    android:gravity="right"
                     android:layout_marginRight="@dimen/padding_small"
                     android:text="20150909"/>
             </LinearLayout>
         </LinearLayout>
-
-
     </LinearLayout>
     <View style="@style/line" android:layout_alignParentBottom="true"/>
 </RelativeLayout>
