--- a/campusjobs/src/main/res/layout/activity_my_message_detail.xml
+++ b/campusjobs/src/main/res/layout/activity_my_message_detail.xml
@@ -67,7 +67,7 @@
                     android:padding="@dimen/padding_small"/>
             </LinearLayout>
 
-            <Button
+            <!--<Button
                 android:layout_width="match_parent"
                 android:layout_height="40dip"
                 android:layout_margin="@dimen/padding_small"
@@ -75,7 +75,7 @@
                 android:text="查看企业简介"
                 android:onClick="toCrop"
                 android:textColor="@color/white"
-                android:textSize="@dimen/text_default" />
+                android:textSize="@dimen/text_default" />-->
         </LinearLayout>
     </ScrollView>
 
