--- a/common/src/main/res/drawable/readstatus_text.xml
+++ b/common/src/main/res/drawable/readstatus_text.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true" android:color="@color/topbar_bg"/>
+    <item android:state_checked="true" android:color="@color/topbar_bg"/>
     <item android:color="@color/light_color"/>
 </selector>
