--- a/common/src/main/res/layout/activity_login.xml
+++ b/common/src/main/res/layout/activity_login.xml
@@ -96,6 +96,8 @@
                 android:checked="true"
                 android:textColor="@color/main_color"/>
             <TextView
+                android:id="@+id/btnRegister"
+                android:clickable="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="点击注册"
