--- a/common/src/main/res/layout/activity_register.xml
+++ b/common/src/main/res/layout/activity_register.xml
@@ -42,7 +42,7 @@
             <ImageView
                 android:id="@+id/imgCode"
                 android:layout_width="80dip"
-                android:layout_height="35dip"
+                android:layout_height="36dip"
                 android:onClick="changeVerCode"
                 android:clickable="true"
                 android:scaleType="fitXY"
@@ -78,6 +78,55 @@
                 android:background="@drawable/button_bg"/>
         </LinearLayout>
 
+        <View style="@style/line" android:layout_marginLeft="@dimen/padding_default"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <cn.goodjobs.common.view.searchItem.InputItemView
+                android:id="@+id/itemPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                listitem:tvtitle="密    码"
+                listitem:hint="密码不少于8位"
+                listitem:inputtype="email"
+                listitem:showLine="false"/>
+
+            <RadioGroup
+                android:id="@+id/radioGroup"
+                android:layout_width="80dip"
+                android:layout_height="36dip"
+                android:checkedButton="@+id/radio0"
+                android:orientation="horizontal"
+                android:layout_marginRight="@dimen/padding_small"
+                android:background="@drawable/radio_blue_bg">
+                <RadioButton
+                    android:layout_width="0dip"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="..."
+                    android:textSize="@dimen/text_small"
+                    android:textColor="@drawable/radio_text"
+                    android:gravity="center"
+                    android:id="@+id/radio0"
+                    android:background="@drawable/radio_left_bg"
+                    android:button="@null"/>
+                <RadioButton
+                    android:layout_width="0dip"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="abc"
+                    android:textSize="@dimen/text_small"
+                    android:textColor="@drawable/radio_text"
+                    android:gravity="center"
+                    android:id="@+id/radio1"
+                    android:background="@drawable/radio_right_bg"
+                    android:button="@null"/>
+            </RadioGroup>
+        </LinearLayout>
+
         <View style="@style/line"/>
 
     </LinearLayout>
@@ -86,9 +135,10 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/button_height"
         android:layout_margin="@dimen/padding_default"
-        android:text="确认修改"
-        android:onClick="doUpdate"
+        android:text="注册"
+        android:onClick="doRegister"
         android:textColor="@color/white"
         android:textSize="@dimen/text_default"
         android:background="@drawable/button_bg"/>
 </LinearLayout>
+
